--- a/README.Rmd
+++ b/README.Rmd
@@ -102,15 +102,19 @@ All images are available on `linux/amd64` and `linux/arm64` platforms.
 Currently we support the last patch version of the last five minor R
 versions. The `latest` tag always uses the last R release.
 
-image  | tags   | note
------- | ------ | ----
-[R development version](https://github.com/r-hub/r-minimal/packages/92808?version=devel)  | `devel`, `4.2.0`, `4.2` | Built daily
-[R 4.1.3](https://github.com/r-hub/r-minimal/packages/92808?version=4.1.3)  | `4.1.3`, `4.1`, `latest` |
-[R 4.1.3 patched](https://github.com/r-hub/r-minimal/packages/92808?version=patched)  | `4.1.3-patched`, `4.1-patched`, `patched` | Built daily
-[R 4.0.5](https://github.com/r-hub/r-minimal/packages/92808?version=4.0.5)  | `4.0.5`, `4.0` |
-[R 3.6.3](https://github.com/r-hub/r-minimal/packages/92808?version=3.6.3)  | `3.6.3`, `3.6` |
-[R 3.5.3](https://github.com/r-hub/r-minimal/packages/92808?version=3.5.3)  | `3.5.3`, `3.5` |
-[R 3.4.4](https://github.com/r-hub/r-minimal/packages/92808?version=3.4.4)  | `3.4.4`, `3.4` |
+```{r, include = FALSE}
+source("tools/calculate_tags.R")
+```
+
+image     | R version         | tags                   | note
+----------| ------------------|----------------------- | -----------
+R devel   | `r rv("devel")`   | `r rv_tags("devel")`   | Built daily
+R next    | `r rv("next")`    | `r rv_tags("next")`    | Built daily
+R release | `r rv("release")` | `r rv_tags("release")` |
+R 4.0.x   | `r rv("4.0")`     | `r rv_tags("4.0")`     |
+R 3.6.x   | `r rv("3.6")`     | `r rv_tags("3.6")`     |
+R 3.5.x   | `r rv("3.5")`     | `r rv_tags("3.5")`     |
+$ 3.4.x   | `r rv("3.4")`     | `r rv_tags("3.4")`     |
 
 ## Dockerfile examples
 
@@ -235,4 +239,4 @@ See https://www.r-project.org/Licenses/ for the R licenses
 
 These Dockerfiles are licensed under the MIT License.
 
-(c) [R Consortium](https://github.com/rconsortium)
+© [R Consortium](https://github.com/rconsortium)
