--- a/README.Rmd
+++ b/README.Rmd
@@ -114,7 +114,7 @@ R release | `r rv("release")` | `r rv_tags("release")` |
 R 4.0.x   | `r rv("4.0")`     | `r rv_tags("4.0")`     |
 R 3.6.x   | `r rv("3.6")`     | `r rv_tags("3.6")`     |
 R 3.5.x   | `r rv("3.5")`     | `r rv_tags("3.5")`     |
-$ 3.4.x   | `r rv("3.4")`     | `r rv_tags("3.4")`     |
+R 3.4.x   | `r rv("3.4")`     | `r rv_tags("3.4")`     |
 
 ## Dockerfile examples
 
