Update README for V8 build failures
[ci skip]

--- a/README.Rmd
+++ b/README.Rmd
@@ -205,16 +205,18 @@ See also the discussion at https://github.com/r-hub/r-minimal/issues/24
   not have the required libraries. For the details, please see:
   https://github.com/r-hub/r-minimal/issues/7
 
-* The V8 package does not compile on Alpine Linux by default. Luckily,
-  you can now download a static binary of V8:
+* Recent versions of the V8 package do not compile on Alpine Linux by default.
+  On x86_64 you can install an older version, if you set and environment
+  variable that switches to a static V8 library:
   ```
-  DOWNLOAD_STATIC_LIBV8=1 installr -d -t curl-dev V8
+  DOWNLOAD_STATIC_LIBV8=1 installr -d -t curl-dev V8@4.2.1
   ```
+  However, this does not work on aarch64.
 
 * The prophet package depens on V8, through rstan, and you can use the same
-  trick to install it:
+  trick to install it, on x86_64:
   ```
-  DOWNLOAD_STATIC_LIBV8=1 installr -d -t "linux-headers gfortran curl-dev" prophet
+  DOWNLOAD_STATIC_LIBV8=1 installr -d -t "linux-headers gfortran curl-dev" prophet V8@4.2.1
   ```
 
 * The readxl package does not compile on Alpine Linux currently.
