--- a/README.Rmd
+++ b/README.Rmd
@@ -201,9 +201,8 @@ See also the discussion at https://github.com/r-hub/r-minimal/issues/24
   installr -d -t linux-headers ps
   ```
 
-* The arrow package are hard to install, because Alpine Linux does
-  not have the required libraries. For the details, please see:
-  https://github.com/r-hub/r-minimal/issues/7
+* The arrow package needs a `Makevars` file to add a link flag. See the
+  example `Dockerfile` in the `examples/arrow` directory.
 
 * The V8 packagees do not compile on aarch64 machines by default.
   On x86_64 it installs fine:
@@ -225,7 +224,7 @@ See also the discussion at https://github.com/r-hub/r-minimal/issues/24
       -a "libcurl libxml2" gaborcsardi/readxl@fix/alpine-linux tidyverse
   ```
 
-* To install the magick package, you need both the `imagemagick` and 
+* To install the magick package, you need both the `imagemagick` and
   `imagemagick-dev` Alpine packages, both at install time and run time:
   ```
   installr -d -a "imagemagick imagemagick-dev" -t "curl-dev" magick
