--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,7 @@ CRAN or GitHub:
 
 ```
 ❯ installr -h
-Usage: ./installr [ -c | -d ] [ -a pkgs ] [ -t pkgs ] [ -r ] [ -p ] REMOTES ...
+Usage: ./installr [ -c | -d ] [ -e ] [ -a pkgs ] [ -t pkgs ] [ -r ] [ -p ] REMOTES ...
 
 Options:
   -c    install C and C++ compilers and keep them
@@ -45,6 +45,7 @@ Options:
   -a    install Alpine packages and keep them
   -t    install Alpine packages, temporarily
   -p    do not remove pak after the installation (ignored if -r is given).
+  -e    use renv to restore the renv.lock file if present.
 
 REMOTES may be:
   * package names from CRAN/Bioconductor, e.g.    ggplot2
@@ -151,6 +152,22 @@ CMD [ "R", "-q", "-e", "pingr::is_online() || stop('offline')" ]
 Similarly to compilers, system packages are removed after the R packages
 have been installed. If you want to keep (some of) them, use `installr -a`
 instead of `installr -t`. (You can also mix the two.)
+
+Using with renv:
+
+To use `renv` to restore the `renv.lock` file, use the `-e` option:
+
+```
+FROM rhub/r-minimal
+COPY renv renv
+COPY renv.lock .
+RUN installr -d -e
+```
+
+If you copy the entire folder with renv, including the `activate.R`, renv will bootstrap itself with the same version as the lock and restore the packages with the proper versions.
+All the necessary compilers and libraries needed at runtime need to be installed with the `-a` and `-t` options.
+Please refer to examples/shiny-renv for an example that install shiny and rmarkdown in a container. 
+
 
 ## Popular packages:
 
