docs(readme): more links

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 R is a free software environment for statistical computing and graphics.
 It compiles and runs on a wide variety of UNIX platforms, Windows and
-MacOS. See more at https://www.r-project.org/
+MacOS. See more at <https://www.r-project.org/>
 
 ## Goals and features
 
@@ -55,7 +55,7 @@ REMOTES may be:
   * path to a local directory, e.g.               local::.
 ```
 
-Recent r-minimal containers use pak (https://github.com/r-lib/pak) for R
+Recent r-minimal containers use [pak](https://github.com/r-lib/pak) for R
 packages installation. If you have problems with pak, or need to install
 a package from a source that pak does not support, but the remotes package
 does, then install the remotes package first.
@@ -69,7 +69,7 @@ development:
 * Recommended R packages are not installed.
 * Documentation is not included.
 * No X11 support.
-* No OpenMP support. (But you can configure it for a package, see `examples/data.table`.)
+* No OpenMP support. (But you can configure it for a package, see [examples/data.table](examples/data.table).)
 * No JPEG, PNG or TIFF support.
 * No Cairo support.
 * No Tcl/Tk support.
@@ -167,7 +167,7 @@ RUN installr -d -e
 
 If you copy the entire folder with renv, including the `activate.R` and `.Rprofile`, renv will bootstrap itself with the same version as the lock and restore the packages with the proper versions.
 All the necessary compilers and libraries needed at runtime need to be installed with the `-a` and `-t` options.
-Please refer to `examples/renv-shiny` for an example that install shiny and rmarkdown in a container.
+Please refer to [examples/renv-shiny](examples/renv-shiny) for an example that install shiny and rmarkdown in a container.
 
 
 ## Popular packages:
@@ -221,7 +221,7 @@ See also the discussion at https://github.com/r-hub/r-minimal/issues/24
   ```
 
 * The arrow package needs a `Makevars` file to add a link flag. See the
-  example `Dockerfile` in the `examples/arrow` directory.
+  example `Dockerfile` in the [examples/arrow](examples/arrow) directory.
 
 * The V8 packagees do not compile on aarch64 machines by default.
   On x86_64 it installs fine:
@@ -242,7 +242,7 @@ See also the discussion at https://github.com/r-hub/r-minimal/issues/24
 
 ## License
 
-See https://www.r-project.org/Licenses/ for the R licenses
+See <https://www.r-project.org/Licenses/> for the R licenses
 
 These Dockerfiles are licensed under the MIT License.
 
