--- a/README.Rmd
+++ b/README.Rmd
@@ -90,7 +90,7 @@ docker pull docker.io/rhub/r-minimal:latest
 or from [GitHub Packages](https://github.com/r-hub/r-minimal/packages/92808?version=latest):
 
 ```
-docker pull docker.pkg.github.com/r-hub/r-minimal/r-minimal:latest
+docker pull ghcr.io/r-hub/r-minimal/r-minimal:latest
 ```
 
 ## Platforms
