Update README for R 4.5.1 release

--- a/README.Rmd
+++ b/README.Rmd
@@ -111,6 +111,7 @@ source("tools/calculate_tags.R")
 | R devel   | `r rv("devel")`   | `r rv_tags("devel")`   | Built daily |
 | R next    | `r rv("next")`    | `r rv_tags("next")`    | Built daily |
 | R release | `r rv("release")` | `r rv_tags("release")` |             |
+| R 4.4.x   | `r rv("4.4")`     | `r rv_tags("4.4")`     |             |
 | R 4.3.x   | `r rv("4.3")`     | `r rv_tags("4.3")`     |             |
 | R 4.2.x   | `r rv("4.2")`     | `r rv_tags("4.2")`     |             |
 | R 4.1.x   | `r rv("4.1")`     | `r rv_tags("4.1")`     |             |
