Include Alpine version in README

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,12 @@ as part of a bigger (web) application, or as a base image. Currently the
 (R 4.4.1) `r-minimal` image is 23.74MB compressed, and 45.88MB
 uncompressed.
 
-All images use Alpine Linux.
+```{r, include = FALSE}
+source("tools/alpine-version.R")
+```
+
+All current images use Alpine Linux `r alpine_version()`. Older images use
+older Alpine releases.
 
 The images include the `installr` tools that can install R packages from
 CRAN or GitHub:
